--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
   },
   "dependencies": {
     "react": "18",
-    "react-dom": "18"
+    "react-dom": "18",
+    "react-icons": "^5.2.1"
   },
   "devDependencies": {
     "@farmfe/cli": "^1.0.2",
     "@farmfe/core": "^1.3.0",
     "@farmfe/plugin-react": "^1.2.0",
     "@types/react": "18",
-    "core-js": "^3.36.1",
     "@types/react-dom": "18",
+    "core-js": "^3.36.1",
     "react-refresh": "^0.14.0"
   }
 }
